<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.ChooseLanguageFragment" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deep_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/what_is_your_mother_language"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/language_select"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <TextView
        android:id="@+id/english_button"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_button_language"
        android:clickable="true"
        android:fontFamily="@font/fredoka_one"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/english"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/russian_button" />

    <TextView
        android:id="@+id/russian_button"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_button_language"
        android:clickable="true"
        android:fontFamily="@font/fredoka_one"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/russian"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/chinese_button"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_button_language"
        android:clickable="true"
        android:fontFamily="@font/fredoka_one"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/chinese"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/english_button" />

    <TextView
        android:id="@+id/belarus_button"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_button_language"
        android:clickable="true"
        android:fontFamily="@font/fredoka_one"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/belarus"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chinese_button" />

    <TextView
        android:id="@+id/kazakh_button"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_button_language"
        android:clickable="true"
        android:fontFamily="@font/fredoka_one"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/kazakh"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/belarus_button" />

    <TextView
        android:id="@+id/choose_button"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/style_button"
        android:clickable="true"
        android:fontFamily="@font/fredoka_one"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/choose"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>